<resources>
    <string name="app_name">Todoister</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_description">Testing this thing..</string>
    <string name="tv_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_product_hint">e.g., Bread,Milk,Eggs</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="stock_quantity_added">Stock Quantity</string>
    <string name="Purchase_Price">Buying Price</string>
    <string name="Selling_Price">Selling Price</string>
    <string name="Date_Added">Date</string>
    <string name="next_week">Next Week</string>
    <string name="radio_convenience">Convenience</string>
    <string name="radio_shopping">Shopping</string>
    <string name="radio_speciality">Speciality</string>
    <string name="image_description">button image</string>
    <string name="about_text">Todoist Clone App - by BAWP - version 0.1</string>
    <string name="add_todos">Add a Todo...</string>
    <string name="radio_unsought">Unsought</string>
    <string name="purchase_price_hint">Selling Price</string>
    <string name="save_image_button">Click to save entry</string>
</resources>