<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <EditText
        android:id="@+id/enter_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/enter_product_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/product_priority_button"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_product"
        app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

    <ImageButton
        android:id="@+id/save_product_button"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_image_button"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintBottom_toTopOf="@+id/priority_radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/product_priority_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_product"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24" />

    <ImageButton
        android:id="@+id/today_calendar_button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_product"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="318dp"
        android:layout_height="296dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/priority_radioGroup"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_priority_button">

        <RadioButton
            android:id="@+id/radioButton_convenience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C91517"
            android:minHeight="48dp"
            android:text="@string/radio_convenience"
            android:textColor="#FFE082" />

        <RadioButton
            android:id="@+id/radioButton_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFB300"
            android:minHeight="48dp"
            android:text="@string/radio_shopping" />

        <RadioButton
            android:id="@+id/radioButton_speciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:minHeight="48dp"
            android:text="@string/radio_speciality" />

    </RadioGroup>

    <EditText
        android:id="@+id/edit_text_buying_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Purchase_Price"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_selling_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_stock_quantity" />

    <EditText
        android:id="@+id/edit_text_stock_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stock_quantity_added"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_buying_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_radioGroup"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edit_text_selling_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Selling_Price"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/calendar_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_buying_price" />


</androidx.constraintlayout.widget.ConstraintLayout>